--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
   <version>1.0</version>
   <packaging>jar</packaging>
 
-  <name>jenkinsapp</name>
+  <name>jenkinsTest</name>
   <url>http://maven.apache.org</url>
 
   <properties>
