--- a/pom.xml
+++ b/pom.xml
@@ -4,10 +4,10 @@
 
   <groupId>com.jenkinstest</groupId>
   <artifactId>jenkinsapp</artifactId>
-  <version>1.0</version>
+  <version>0.0.1-SNAPSHOT</version>
   <packaging>jar</packaging>
 
-  <name>jenkinsTest</name>
+  <name>jenkinsapp</name>
   <url>http://maven.apache.org</url>
 
   <properties>
