--- a/pom.xml
+++ b/pom.xml
@@ -2,12 +2,12 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.jenkinstest</groupId>
-  <artifactId>jenkinsapp</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <groupId>nexustest</groupId>
+  <artifactId>nexusApp</artifactId>
+  <version>2.0</version>
   <packaging>jar</packaging>
 
-  <name>jenkinsapp</name>
+  <name>nexusApplication</name>
   <url>http://maven.apache.org</url>
 
   <properties>
